--- a/index.html
+++ b/index.html
@@ -8,75 +8,132 @@
   <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
+  <!-- Open Graph Meta Tags for SEO and Social Sharing -->
+  <meta property="og:title" content="Tanish Gift of Gratitude" />
+  <meta property="og:description" content="Custom handcrafted gifts made with love & gratitude." />
+  <meta property="og:image" content="sample1.jpg" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <style>
+    :root {
+      --bg-color: #ffe6f0;
+      --text-color: #4d0039;
+      --header-bg: #ff99cc;
+      --accent-color: #cc6699;
+      --white: #ffffff;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #ffe6f0;
-      color: #4d0039;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
+
+    body.dark {
+      --bg-color: #1e1e1e;
+      --text-color: #f5f5f5;
+      --header-bg: #333;
+      --accent-color: #ff66aa;
+    }
+
     header {
-      background-color: #ff99cc;
+      background-color: var(--header-bg);
       padding: 2rem;
       text-align: center;
       color: white;
+      position: sticky;
+      top: 0;
+      z-index: 999;
     }
+
     header img {
       height: 120px;
       margin-bottom: 10px;
     }
+
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
       margin: 0.2rem 0;
     }
+
     nav {
       margin-top: 1rem;
     }
+
     nav a {
       margin: 0 15px;
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
+
+    .toggle-mode {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
     main {
       padding: 2rem;
       text-align: center;
     }
+
     .cta {
       margin-top: 2rem;
     }
+
     .cta a {
-      background-color: #cc6699;
+      background-color: var(--accent-color);
       color: white;
       padding: 0.8rem 1.5rem;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
     }
+
     .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 2rem;
       margin: 3rem 0;
     }
+
     .product {
-      background: white;
+      background: var(--white);
       border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
     }
+
     .product img {
       max-width: 100%;
       border-radius: 8px;
+      transition: transform 0.3s ease;
     }
+
+    .product:hover img {
+      transform: scale(1.05);
+    }
+
     footer {
-      background-color: #ff99cc;
+      background-color: var(--header-bg);
       color: white;
       text-align: center;
       padding: 1rem;
       margin-top: 2rem;
     }
+
     .contact-form {
       margin-top: 2rem;
       text-align: left;
@@ -84,6 +141,7 @@
       margin-left: auto;
       margin-right: auto;
     }
+
     .contact-form input, .contact-form textarea {
       width: 100%;
       padding: 0.6rem;
@@ -91,8 +149,9 @@
       border: 1px solid #ccc;
       border-radius: 6px;
     }
+
     .contact-form button {
-      background-color: #cc6699;
+      background-color: var(--accent-color);
       color: white;
       padding: 0.7rem 1.5rem;
       border: none;
@@ -100,6 +159,7 @@
       font-weight: bold;
       cursor: pointer;
     }
+
     .whatsapp-float {
       position: fixed;
       bottom: 20px;
@@ -116,6 +176,7 @@
 </head>
 <body>
   <header>
+    <button class="toggle-mode" onclick="toggleMode()">🌓</button>
     <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
     <h1>Tanish Gift of Gratitude</h1>
     <p>Gratitude, Handcrafted with Love</p>
@@ -139,24 +200,32 @@
         <img src="sample1.jpg" alt="Custom Photo Frame" />
         <h3>Custom Photo Frame</h3>
         <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
+        <p><strong>Price:</strong> ₹499</p>
+        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
       <div class="product">
         <img src="sample2.jpg" alt="Mini Scrapbook" />
         <h3>Mini Scrapbook</h3>
         <p>A pocket-sized book filled with love, perfect for gifting.</p>
+        <p><strong>Price:</strong> ₹299</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
       <div class="product">
         <img src="sample3.jpg" alt="Name Plate Frame" />
         <h3>Name Plate Frame</h3>
         <p>Elegant name plate designs with floral or wooden themes.</p>
+        <p><strong>Price:</strong> ₹599</p>
+        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
       <div class="product">
         <img src="sample4.jpg" alt="Anniversary Gift Frame" />
         <h3>Anniversary Gift Frame</h3>
         <p>Celebrate love with a personalized frame for special occasions.</p>
+        <p><strong>Price:</strong> ₹699</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
     </section>
@@ -179,5 +248,11 @@
   <footer>
     <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
   </footer>
+
+  <script>
+    function toggleMode() {
+      document.body.classList.toggle("dark");
+    }
+  </script>
 </body>
 </html>
