--- a/index.html
+++ b/index.html
@@ -8,132 +8,96 @@
   <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
-  <!-- Open Graph Meta Tags for SEO and Social Sharing -->
-  <meta property="og:title" content="Tanish Gift of Gratitude" />
-  <meta property="og:description" content="Custom handcrafted gifts made with love & gratitude." />
-  <meta property="og:image" content="sample1.jpg" />
-  <meta property="og:url" content="https://yourdomain.com" />
-  <meta name="twitter:card" content="summary_large_image" />
-
   <style>
-    :root {
-      --bg-color: #ffe6f0;
-      --text-color: #4d0039;
-      --header-bg: #ff99cc;
-      --accent-color: #cc6699;
-      --white: #ffffff;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      transition: background-color 0.3s ease, color 0.3s ease;
+      background-color: #ffe6f0;
+      color: #4d0039;
     }
-
-    body.dark {
-      --bg-color: #1e1e1e;
-      --text-color: #f5f5f5;
-      --header-bg: #333;
-      --accent-color: #ff66aa;
-    }
-
     header {
-      background-color: var(--header-bg);
+      background-color: #ff99cc;
       padding: 2rem;
       text-align: center;
       color: white;
-      position: sticky;
-      top: 0;
-      z-index: 999;
     }
-
     header img {
       height: 120px;
       margin-bottom: 10px;
     }
-
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
       margin: 0.2rem 0;
     }
-
     nav {
       margin-top: 1rem;
     }
-
     nav a {
       margin: 0 15px;
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
-
-    .toggle-mode {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background: var(--accent-color);
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
     main {
       padding: 2rem;
       text-align: center;
     }
-
     .cta {
       margin-top: 2rem;
     }
-
     .cta a {
-      background-color: var(--accent-color);
+      background-color: #cc6699;
       color: white;
       padding: 0.8rem 1.5rem;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
     }
-
+    .search-bar {
+      margin: 2rem auto;
+      max-width: 400px;
+    }
+    .search-bar input {
+      width: 100%;
+      padding: 0.7rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
     .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 2rem;
       margin: 3rem 0;
     }
-
     .product {
-      background: var(--white);
+      background: white;
       border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
     }
-
     .product img {
       max-width: 100%;
       border-radius: 8px;
-      transition: transform 0.3s ease;
     }
-
-    .product:hover img {
-      transform: scale(1.05);
+    .add-to-cart {
+      display: block;
+      margin: 0.5rem auto;
+      padding: 0.5rem 1rem;
+      background-color: #cc6699;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
     }
-
     footer {
-      background-color: var(--header-bg);
+      background-color: #ff99cc;
       color: white;
       text-align: center;
       padding: 1rem;
       margin-top: 2rem;
     }
-
     .contact-form {
       margin-top: 2rem;
       text-align: left;
@@ -141,7 +105,6 @@
       margin-left: auto;
       margin-right: auto;
     }
-
     .contact-form input, .contact-form textarea {
       width: 100%;
       padding: 0.6rem;
@@ -149,9 +112,8 @@
       border: 1px solid #ccc;
       border-radius: 6px;
     }
-
     .contact-form button {
-      background-color: var(--accent-color);
+      background-color: #cc6699;
       color: white;
       padding: 0.7rem 1.5rem;
       border: none;
@@ -159,7 +121,6 @@
       font-weight: bold;
       cursor: pointer;
     }
-
     .whatsapp-float {
       position: fixed;
       bottom: 20px;
@@ -172,11 +133,34 @@
       z-index: 1000;
       text-decoration: none;
     }
+    .cart-icon {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background: #cc6699;
+      color: white;
+      border-radius: 50%;
+      padding: 16px;
+      font-size: 22px;
+      z-index: 1001;
+      text-decoration: none;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    .cart-icon span {
+      position: absolute;
+      top: -6px;
+      right: -6px;
+      background: red;
+      color: white;
+      border-radius: 50%;
+      padding: 2px 6px;
+      font-size: 12px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <header>
-    <button class="toggle-mode" onclick="toggleMode()">🌓</button>
     <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
     <h1>Tanish Gift of Gratitude</h1>
     <p>Gratitude, Handcrafted with Love</p>
@@ -190,42 +174,50 @@
   <main>
     <h2>Welcome to Our World of Handcrafted Gifts</h2>
     <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-    
+
     <div class="cta">
       <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
     </div>
 
+    <div class="search-bar">
+      <input type="text" id="searchInput" placeholder="Search products..." onkeyup="filterProducts()" />
+    </div>
+
     <section id="products" class="products">
-      <div class="product">
+      <div class="product" data-title="Custom Photo Frame">
         <img src="sample1.jpg" alt="Custom Photo Frame" />
         <h3>Custom Photo Frame</h3>
         <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
         <p><strong>Price:</strong> ₹499</p>
-        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
+        <p>⭐️⭐️⭐️⭐️⭐ (12 reviews)</p>
+        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
-      <div class="product">
+      <div class="product" data-title="Mini Scrapbook">
         <img src="sample2.jpg" alt="Mini Scrapbook" />
         <h3>Mini Scrapbook</h3>
         <p>A pocket-sized book filled with love, perfect for gifting.</p>
         <p><strong>Price:</strong> ₹299</p>
-        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
+        <p>⭐️⭐️⭐️⭐️ (8 reviews)</p>
+        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
-      <div class="product">
+      <div class="product" data-title="Name Plate Frame">
         <img src="sample3.jpg" alt="Name Plate Frame" />
         <h3>Name Plate Frame</h3>
         <p>Elegant name plate designs with floral or wooden themes.</p>
-        <p><strong>Price:</strong> ₹599</p>
-        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
+        <p><strong>Price:</strong> ₹399</p>
+        <p>⭐️⭐️⭐️⭐️⭐ (10 reviews)</p>
+        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
-      <div class="product">
+      <div class="product" data-title="Anniversary Gift Frame">
         <img src="sample4.jpg" alt="Anniversary Gift Frame" />
         <h3>Anniversary Gift Frame</h3>
         <p>Celebrate love with a personalized frame for special occasions.</p>
-        <p><strong>Price:</strong> ₹699</p>
-        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
+        <p><strong>Price:</strong> ₹599</p>
+        <p>⭐️⭐️⭐️⭐️ (15 reviews)</p>
+        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
     </section>
@@ -243,15 +235,35 @@
     </section>
   </main>
 
-  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
+  <!-- Floating WhatsApp Icon -->
+  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">🚶</a>
+
+  <!-- Floating Cart Icon -->
+  <div class="cart-icon" onclick="alert('This is your cart. Full cart system coming soon!')">
+    🛒
+    <span id="cart-count">0</span>
+  </div>
 
   <footer>
     <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
   </footer>
 
   <script>
-    function toggleMode() {
-      document.body.classList.toggle("dark");
+    let cartCount = 0;
+
+    function addToCart() {
+      cartCount++;
+      document.getElementById('cart-count').textContent = cartCount;
+    }
+
+    function filterProducts() {
+      const query = document.getElementById("searchInput").value.toLowerCase();
+      const products = document.querySelectorAll(".product");
+
+      products.forEach(product => {
+        const title = product.getAttribute("data-title").toLowerCase();
+        product.style.display = title.includes(query) ? "block" : "none";
+      });
     }
   </script>
 </body>
