--- a/index.html
+++ b/index.html
@@ -7,7 +7,57 @@
 
   <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <script defer>
+    document.addEventListener("DOMContentLoaded", () => {
+      const searchInput = document.getElementById("searchInput");
+      const categorySelect = document.getElementById("categoryFilter");
+      const products = document.querySelectorAll(".product");
+      const cartIcon = document.getElementById("cartIcon");
+      const cartPopup = document.getElementById("cartPopup");
+      const cartItemsList = document.getElementById("cartItems");
+      const cartCount = document.getElementById("cartCount");
+      const clearCartBtn = document.getElementById("clearCart");
 
+      let cart = [];
+
+      function updateCartUI() {
+        cartItemsList.innerHTML = cart.map(item => `<li>${item}</li>`).join("");
+        cartCount.textContent = cart.length;
+      }
+
+      document.querySelectorAll(".add-to-cart").forEach(btn => {
+        btn.addEventListener("click", () => {
+          const itemName = btn.getAttribute("data-name");
+          cart.push(itemName);
+          updateCartUI();
+        });
+      });
+
+      cartIcon.addEventListener("click", () => {
+        cartPopup.style.display = cartPopup.style.display === "block" ? "none" : "block";
+      });
+
+      clearCartBtn.addEventListener("click", () => {
+        cart = [];
+        updateCartUI();
+      });
+
+      function filterProducts() {
+        const searchTerm = searchInput.value.toLowerCase();
+        const selectedCategory = categorySelect.value;
+        products.forEach(product => {
+          const name = product.querySelector("h3").textContent.toLowerCase();
+          const category = product.getAttribute("data-category");
+          const matchesSearch = name.includes(searchTerm);
+          const matchesCategory = selectedCategory === "all" || selectedCategory === category;
+          product.style.display = matchesSearch && matchesCategory ? "block" : "none";
+        });
+      }
+
+      searchInput.addEventListener("input", filterProducts);
+      categorySelect.addEventListener("change", filterProducts);
+    });
+  </script>
   <style>
     body {
       margin: 0;
@@ -54,14 +104,13 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .search-bar {
-      margin: 2rem auto;
-      max-width: 400px;
+    .search-filter {
+      margin: 2rem 0;
     }
-    .search-bar input {
-      width: 100%;
-      padding: 0.7rem;
-      border-radius: 8px;
+    .search-filter input, .search-filter select {
+      padding: 0.5rem;
+      margin: 0 0.5rem;
+      border-radius: 6px;
       border: 1px solid #ccc;
     }
     .products {
@@ -80,16 +129,14 @@
       max-width: 100%;
       border-radius: 8px;
     }
-    .add-to-cart {
-      display: block;
-      margin: 0.5rem auto;
-      padding: 0.5rem 1rem;
+    .product button {
       background-color: #cc6699;
       color: white;
+      padding: 0.5rem 1rem;
       border: none;
       border-radius: 6px;
-      font-weight: bold;
       cursor: pointer;
+      margin-top: 0.5rem;
     }
     footer {
       background-color: #ff99cc;
@@ -123,7 +170,7 @@
     }
     .whatsapp-float {
       position: fixed;
-      bottom: 20px;
+      bottom: 80px;
       right: 20px;
       background: #25d366;
       color: white;
@@ -135,27 +182,36 @@
     }
     .cart-icon {
       position: fixed;
-      bottom: 90px;
+      bottom: 20px;
       right: 20px;
       background: #cc6699;
       color: white;
       border-radius: 50%;
-      padding: 16px;
-      font-size: 22px;
+      padding: 15px;
+      font-size: 24px;
+      cursor: pointer;
       z-index: 1001;
-      text-decoration: none;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-    .cart-icon span {
-      position: absolute;
-      top: -6px;
-      right: -6px;
-      background: red;
-      color: white;
-      border-radius: 50%;
-      padding: 2px 6px;
-      font-size: 12px;
-      font-weight: bold;
+    .cart-popup {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 250px;
+      display: none;
+      z-index: 1002;
+    }
+    .cart-popup h4 {
+      margin-top: 0;
+    }
+    .cart-popup ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 1rem 0;
     }
   </style>
 </head>
@@ -174,58 +230,49 @@
   <main>
     <h2>Welcome to Our World of Handcrafted Gifts</h2>
     <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-
     <div class="cta">
       <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
     </div>
 
-    <div class="search-bar">
-      <input type="text" id="searchInput" placeholder="Search products..." onkeyup="filterProducts()" />
+    <div class="search-filter">
+      <input type="text" id="searchInput" placeholder="Search products...">
+      <select id="categoryFilter">
+        <option value="all">All Categories</option>
+        <option value="frames">Frames</option>
+        <option value="albums">Albums</option>
+      </select>
     </div>
 
     <section id="products" class="products">
-      <div class="product" data-title="Custom Photo Frame">
+      <div class="product" data-category="frames">
         <img src="sample1.jpg" alt="Custom Photo Frame" />
         <h3>Custom Photo Frame</h3>
         <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
-        <p><strong>Price:</strong> ₹499</p>
-        <p>⭐️⭐️⭐️⭐️⭐ (12 reviews)</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+        <button class="add-to-cart" data-name="Custom Photo Frame">Add to Cart</button>
       </div>
-      <div class="product" data-title="Mini Scrapbook">
+      <div class="product" data-category="albums">
         <img src="sample2.jpg" alt="Mini Scrapbook" />
         <h3>Mini Scrapbook</h3>
         <p>A pocket-sized book filled with love, perfect for gifting.</p>
-        <p><strong>Price:</strong> ₹299</p>
-        <p>⭐️⭐️⭐️⭐️ (8 reviews)</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+        <button class="add-to-cart" data-name="Mini Scrapbook">Add to Cart</button>
       </div>
-      <div class="product" data-title="Name Plate Frame">
+      <div class="product" data-category="frames">
         <img src="sample3.jpg" alt="Name Plate Frame" />
         <h3>Name Plate Frame</h3>
         <p>Elegant name plate designs with floral or wooden themes.</p>
-        <p><strong>Price:</strong> ₹399</p>
-        <p>⭐️⭐️⭐️⭐️⭐ (10 reviews)</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+        <button class="add-to-cart" data-name="Name Plate Frame">Add to Cart</button>
       </div>
-      <div class="product" data-title="Anniversary Gift Frame">
+      <div class="product" data-category="frames">
         <img src="sample4.jpg" alt="Anniversary Gift Frame" />
         <h3>Anniversary Gift Frame</h3>
         <p>Celebrate love with a personalized frame for special occasions.</p>
-        <p><strong>Price:</strong> ₹599</p>
-        <p>⭐️⭐️⭐️⭐️ (15 reviews)</p>
-        <button class="add-to-cart" onclick="addToCart()">Add to Cart</button>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+        <button class="add-to-cart" data-name="Anniversary Gift Frame">Add to Cart</button>
       </div>
     </section>
 
     <section id="contact">
       <h2>Contact Indraja Balla</h2>
       <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
-
       <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
@@ -235,36 +282,17 @@
     </section>
   </main>
 
-  <!-- Floating WhatsApp Icon -->
-  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">🚶</a>
+  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
 
-  <!-- Floating Cart Icon -->
-  <div class="cart-icon" onclick="alert('This is your cart. Full cart system coming soon!')">
-    🛒
-    <span id="cart-count">0</span>
+  <div class="cart-icon" id="cartIcon">🛒 <span id="cartCount">0</span></div>
+  <div class="cart-popup" id="cartPopup">
+    <h4>Your Cart</h4>
+    <ul id="cartItems"></ul>
+    <button id="clearCart">Clear Cart</button>
   </div>
 
   <footer>
     <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
   </footer>
-
-  <script>
-    let cartCount = 0;
-
-    function addToCart() {
-      cartCount++;
-      document.getElementById('cart-count').textContent = cartCount;
-    }
-
-    function filterProducts() {
-      const query = document.getElementById("searchInput").value.toLowerCase();
-      const products = document.querySelectorAll(".product");
-
-      products.forEach(product => {
-        const title = product.getAttribute("data-title").toLowerCase();
-        product.style.display = title.includes(query) ? "block" : "none";
-      });
-    }
-  </script>
 </body>
 </html>
